<resources>
    <string name="app_name">Javapie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_upcoming">Upcoming Events</string>
    <string name="menu_previous">Previous Events </string>
    <string name="menu_today">Today Events</string>
    <string name="menu_register_for">Events Registered for</string>
</resources>
