<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_upcoming"
            android:title="@string/menu_upcoming" />
        <item
            android:id="@+id/nav_today"
            android:title="@string/menu_today" />
        <item
            android:id="@+id/nav_previous"
            android:title="@string/menu_previous" />
        <item
            android:id="@+id/nav_registerfor"
            android:title="@string/menu_register_for" />
    </group>

</menu>
